changes to 2.5, 2.1 and some typos

--- a/outcome2.html
+++ b/outcome2.html
@@ -57,7 +57,7 @@
                 <br>
                 <p>
                 <h4> 2.1 Review the ongoing use of IT tools and change approach as needed – in making your own website,
-                    are you happy with the tools you used? E.g. Visual Studio Code, Trello | </h4> I haev used Visual
+                    are you happy with the tools you used? E.g. Visual Studio Code, Trello | </h4> I have used Visual
                 Studio Code each day of the project and it has been absolutly vital! The extensions to help the flow of
                 coding, the fantastic intuitive completion of words is very very helpful when writing out similar names
                 for variables, divs, selectors etc.
@@ -102,7 +102,9 @@
                 <p>
                 <h4>2.5 Review outcomes to make sure they match requirements
                     and are fit for purpose</h4> I believe the outcomes are fit for purpose. It seems to be quite self
-                explanatory, and I don't think I've strayed too far off the beaten track.
+                explanatory, and I don't think I've strayed too far off the beaten track. I wanted to create a website
+                with good functionality that displayed my progress that I have made thus far in the course. I think I
+                have acheived that, and that it suited the outcomes absolutely fine.
                 </p>
             </div>
         </div>
