--- a/outcome4.html
+++ b/outcome4.html
@@ -76,10 +76,14 @@
                 I have used all o my HTML semtantically, for creen readers and accessibility.
                 </p>
                 <p>
-                <h4>1.5 Describing copyright and other constraints
-                    affecting websites. | </h4> I don't have any elements that could come under copyright issue apart
+                <h4>1.5 Describing copywrite and other constraints
+                    affecting websites. | </h4> I don't have any elements that could come under copywrite issue apart
                 from the gif I link to of Jack Black. However, I have a copywrite disclaimer, and I also don not host
-                any products/assets that could come under copywrite - only links to them.
+                any products/assets that could come under copywrite - only links to them. Were i to have included pieces
+                of work that were created bty other people, or owned by another company for example a song, rights owned
+                by Sony Music, or a piece of artwork owned by the artist - I would be within my rights to use that piece
+                of work as long as I was not making any profit from the website ( this includes ad revenue), and I made
+                it clear that the work was not my own and gave the dredit to the relevent party.
                 </p>
                 <p>
                 <h4>1.6 Describing access issues that need taking into account - describe issues
