added more to 2.5

--- a/outcome2.html
+++ b/outcome2.html
@@ -105,6 +105,11 @@
                 explanatory, and I don't think I've strayed too far off the beaten track. I wanted to create a website
                 with good functionality that displayed my progress that I have made thus far in the course. I think I
                 have acheived that, and that it suited the outcomes absolutely fine.
+
+                At the start of the project I knew I wanted to make a website that incorporated some interesting facts
+                about me, and that it included some JavaScipt - that is literally it. My main problem looking back was
+                that the idea itself was lacking. I think it suited the purpose of the task and I'm happy with what I
+                acheived, but on reflection I think that is where i could have improved. A Killer idea.
                 </p>
             </div>
         </div>
